[package]
name = "ac-lib-bundle"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "Rust submission library bundler for AtCoder"
readme = "README.md"
repository = "https://github.com/Fe2O3-Tpa/ac-lib-bundle"
homepage = "https://github.com/Fe2O3-Tpa/ac-lib-bundle"
keywords = ["atcoder", "rust", "cli", "bundle"]
categories = ["command-line-utilities", "development-tools"]
exclude = ["target/*", ".git/*"]

[[bin]]
name = "ac-lib-bundle"
path = "src/main.rs"

[dependencies]
syn = { version = "2", features = ["full"] }
proc-macro2 = { version = "1", features = ["span-locations"] }